# openapi.yaml
@@ -1,7 +1,7 @@
 openapi: 3.0.2
 info:
   title: collection instrument
-  description: A service for the managing collection instrument service resources
+  description: An API for managing collection instrument service resources
   version: "1.0"
 
 servers:
@@ -428,7 +428,7 @@ paths:
                     type: string
                     format: uuid
                     example: 'cb0711c3-0ac8-41d3-ae0e-567e5ea1ef87'
-  "/collection-instrument-api/1.0.2/registryinstrument/exercise_id/{exercise_id}":
+  "/collection-instrument-api/1.0.2/registryinstrument/exercise-id/{exercise_id}":
     get:
       summary: Get a list of selected registry instruments for the given exercise UUID.
       tags:
@@ -453,7 +453,7 @@ paths:
                   $ref: '#/components/schemas/RegistryInstrument'
         '404':
           description: No registry instruments found for the given exercise ID
-  "/collection-instrument-api/1.0.2/registryinstrument/exercise_id/{exercise_id}/form_type/{form_type}":
+  "/collection-instrument-api/1.0.2/registryinstrument/exercise-id/{exercise_id}/formtype/{form_type}":
     get:
       summary: Get a selected registry instrument for the given exercise UUID and form type classifier value.
       tags:
@@ -679,6 +679,8 @@ components:
         guid:
           type: string
           format: uuid
-
+        published_at:
+          type: string
+          format: date-time
 security:
   - basicAuth: []
